bugfix: update overflow-x hidden to overflow hidden
Noticed there is an unnecessary vertical scroll bar appearing, too.

--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,7 @@
 /* preset */
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   padding: 0;
